# gravity

./: .gitignore  CLAUDE.md
chris/: Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
chris/docs/: ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT_STRATEGY.md  GPU.md  GRAVITY_SIMULATION.md  MILESTONES.md  PERFORMANCE.md  PHYSICS_NOTES.md  PROJECT_SCOPE.md  REPLAY_FORMAT.md  SIMULATION_TUNING.md  project-outline.md
chris/spacetime-expansion/: index.html  package-lock.json  package.json
chris/spacetime-expansion/src/: App.css  App.tsx
chris/spacetime-expansion/src/components/: Controls.tsx  SimulationCanvas.tsx
chris/spacetime-expansion/src/physics/: constants.ts  friedmann.ts  universe.ts
chris/spacetime-expansion/src/rendering/: canvasRenderer.ts
chris/spacetime-expansion/src/simulation/: galaxyGenerator.ts  simulationEngine.ts  types.ts
chris/src/: __init__.py  config.py  main.py
chris/src/common/: __init__.py
chris/src/gravity/: __init__.py  benchmark.py  collisions.py  demo_3d.py  init_conditions.py  integrators.py  state.py  test_long_run.py  tests_2d.py  tests_3d.py  tests_collisions.py  viz_3d.py  viz_export.py  viz_live.py
chris/tools/: export_replay_to_json.py  sim_server.py  thin_replay.py
chris/web-viewer/: README.md  index.html  queue.html  replay.json  showcase.html  viewer.html
unified/: .dockerignore  Dockerfile  README.md  compose.yaml
unified/backend/: controller.py  requirements-gpu.txt  requirements.txt
unified/core/: __init__.py
unified/frontend/: index.html  queue.html  viewer.html
(+27 files in other folders)
